--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -187,8 +187,8 @@ hr.small {
     display: table;
     width: 100%;
     height: 400px;
-    color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
+    color: black;
+    background: url(../img/bitcoin.png) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
